--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "array.prototype.flatmap": "^1.3.2",
     "arraybuffer.prototype.slice": "^1.0.2",
     "available-typed-arrays": "^1.0.5",
-    "babel-jest": "^29.7.0",
     "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-jest-hoist": "^29.6.3",
     "babel-plugin-polyfill-corejs2": "^0.4.6",
@@ -71,11 +70,8 @@
     "es-to-primitive": "^1.2.1",
     "escalade": "^3.1.1",
     "escape-string-regexp": "^1.0.5",
-    "eslint": "^8.54.0",
-    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-module-utils": "^2.8.0",
-    "eslint-plugin-import": "^2.29.0",
     "eslint-scope": "^7.2.2",
     "eslint-visitor-keys": "^3.4.3",
     "espree": "^9.6.1",
@@ -160,7 +156,6 @@
     "istanbul-lib-report": "^3.0.1",
     "istanbul-lib-source-maps": "^4.0.1",
     "istanbul-reports": "^3.1.6",
-    "jest": "^29.7.0",
     "jest-changed-files": "^29.7.0",
     "jest-circus": "^29.7.0",
     "jest-cli": "^29.7.0",
@@ -322,7 +317,15 @@
     "yargs-parser": "^21.1.1",
     "yocto-queue": "^0.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.54.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "jest": "^29.7.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
